--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,7 @@ Makefile
 
 #log
 /ExampleGame/Log.txt
+/Editor/Profile-Startup.json
+/Editor/Profile-Shutdown.json
+/Editor/Profile-Runtime.json
+/Editor/Log.txt
