Decides to go with OpenFBX to load the models, at least for now, assimp is too large and complex

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Editor/vendor/IconFont"]
 	path = Editor/vendor/IconFont
 	url = https://github.com/juliettef/IconFontCppHeaders
+[submodule "Editor/vendor/OpenFBX"]
+	path = Editor/vendor/OpenFBX
+	url = https://github.com/nem0/OpenFBX
