--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=2560,1377
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,40 +9,86 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1351,114
+Pos=77,339
 Size=550,680
-Collapsed=0
+Collapsed=1
 
 [Window][ Viewport]
 Pos=758,22
-Size=1162,786
+Size=1400,1007
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
 Pos=0,22
-Size=756,786
+Size=756,1007
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Content Explorer]
-Pos=0,810
-Size=1501,270
+Pos=0,1031
+Size=1687,346
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][ Joystick Info]
-Pos=1503,810
-Size=417,270
+Pos=1689,1031
+Size=469,346
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][ Heirachy]
+Pos=2160,582
+Size=400,795
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][ Properties]
+Pos=2160,22
+Size=400,558
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][ vsn_mesh_body_nude_full.staticMesh]
+Pos=127,111
+Size=1074,1012
+Collapsed=0
+
+[Window][ vsn_mesh_10_face_10_futae.staticMesh]
+Pos=60,60
+Size=640,480
+Collapsed=0
+
+[Window][ vsn_mesh_0_face_00_skin.staticMesh]
+Pos=297,456
+Size=419,477
+Collapsed=0
+
+[Window][ vsn_mesh_3_face_03_eyes.staticMesh]
+Pos=545,174
+Size=640,480
+Collapsed=0
+
+[Window][ vsn_mesh_hair_Pony_tail.staticMesh]
+Pos=60,60
+Size=640,480
+Collapsed=0
+
+[Window][##StartScreen]
+Pos=895,288
+Size=800,800
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=2088,-688 Size=1920,1058 Split=Y
-  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=2560,1007 Split=X Selected=0xF39687C3
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=756,873 Selected=0xF9BEF62A
-    DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1802,873 CentralNode=1 Selected=0xF39687C3
-  DockNode    ID=0x00000002 Parent=0x09EF459F SizeRef=2560,346 Split=X Selected=0x2300F6EF
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=2002,480 Selected=0x0D3852B7
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=556,480 Selected=0x2300F6EF
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
+  DockNode      ID=0x00000007 Parent=0x09EF459F SizeRef=2158,1355 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=756,873 Selected=0xF9BEF62A
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1802,873 CentralNode=1 Selected=0xF39687C3
+    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=2002,480 Selected=0x0D3852B7
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=556,480 Selected=0x2300F6EF
+  DockNode      ID=0x00000008 Parent=0x09EF459F SizeRef=400,1355 Split=Y Selected=0xE7629639
+    DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0xE7629639
+    DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
 
