added tint colour to material, set the start project screen to be always in the middle of the screen. changed the way that the 2d scene renders so that now 2d and 3d can both be kind of rendered at the same time.

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -1,39 +1,40 @@
 [Window][DockSpace]
 Pos=0,0
-Size=2560,1377
+Size=1920,1017
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+Pos=19,19
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=77,339
+ViewportPos=646,1021
+ViewportId=0xE927CF2F
 Size=550,680
 Collapsed=1
 
 [Window][ Viewport]
 Pos=758,22
-Size=1400,1007
+Size=1162,739
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
 Pos=0,22
-Size=756,1007
+Size=756,739
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Content Explorer]
-Pos=0,1031
-Size=1687,346
+Pos=0,763
+Size=1501,254
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][ Joystick Info]
-Pos=1689,1031
-Size=469,346
+Pos=1503,763
+Size=417,254
 Collapsed=0
 DockId=0x00000004,0
 
@@ -75,12 +76,12 @@ Size=640,480
 Collapsed=0
 
 [Window][##StartScreen]
-Pos=895,288
-Size=800,800
+Pos=660,208
+Size=600,600
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=1920,995 Split=X
   DockNode      ID=0x00000007 Parent=0x09EF459F SizeRef=2158,1355 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=756,873 Selected=0xF9BEF62A
