renamed all editor classes with imgui prefix

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -9,19 +9,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=90,913
+Pos=29,970
 Size=550,680
 Collapsed=1
 
 [Window][ Viewport]
-Pos=758,22
-Size=1400,1007
+Pos=729,22
+Size=1429,1007
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
 Pos=0,22
-Size=756,1007
+Size=727,1007
 Collapsed=0
 DockId=0x00000005,0
 
@@ -79,12 +79,28 @@ Pos=980,388
 Size=600,600
 Collapsed=0
 
+[Window][ imgui.ini]
+Pos=60,60
+Size=800,600
+Collapsed=0
+
+[Window][ Passport.jpg##6]
+ViewportPos=55,109
+ViewportId=0xD2F2F315
+Size=1566,1408
+Collapsed=0
+
+[Window][ COPYING.txt]
+Pos=60,60
+Size=800,600
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
   DockNode      ID=0x00000007 Parent=0x09EF459F SizeRef=2158,1355 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=756,873 Selected=0xF9BEF62A
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1802,873 CentralNode=1 Selected=0xF39687C3
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=727,873 Selected=0xF9BEF62A
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1429,873 CentralNode=1 Selected=0xF39687C3
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=2002,480 Selected=0x0D3852B7
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=556,480 Selected=0x2300F6EF
