--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,14 +14,14 @@ Size=550,680
 Collapsed=1
 
 [Window][ Viewport]
-Pos=729,22
-Size=1429,1007
+Pos=751,22
+Size=1407,1007
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
 Pos=0,22
-Size=727,1007
+Size=749,1007
 Collapsed=0
 DockId=0x00000005,0
 
@@ -95,12 +95,17 @@ Pos=60,60
 Size=800,600
 Collapsed=0
 
+[Window][ Editor Preferences]
+Pos=697,295
+Size=640,480
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
   DockNode      ID=0x00000007 Parent=0x09EF459F SizeRef=2158,1355 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=727,873 Selected=0xF9BEF62A
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1429,873 CentralNode=1 Selected=0xF39687C3
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=749,873 Selected=0xF9BEF62A
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1407,873 CentralNode=1 Selected=0xF39687C3
     DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
       DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=2002,480 Selected=0x0D3852B7
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=556,480 Selected=0x2300F6EF
