Changed minimum opengl version, Added keyboard handling to the mian dock space, changed the internal console class so it builds on linux

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,16 +14,10 @@ Size=550,680
 Collapsed=1
 
 [Window][ Viewport]
-Pos=751,22
-Size=1421,1007
+Pos=481,22
+Size=1691,1007
 Collapsed=0
-DockId=0x00000006,0
-
-[Window][Console]
-Pos=0,22
-Size=749,1007
-Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000C,0
 
 [Window][ Content Explorer]
 Pos=0,1031
@@ -55,20 +49,33 @@ Size=600,600
 Collapsed=0
 
 [Window][ Editor Preferences]
-Pos=697,295
+Pos=1279,307
+Size=640,480
+Collapsed=0
+
+[Window][ Console]
+Pos=0,22
+Size=479,1007
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][ Project Settings]
+Pos=60,60
 Size=640,480
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
-  DockNode      ID=0x00000007 Parent=0x09EF459F SizeRef=2172,1355 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=749,873 Selected=0xF9BEF62A
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1421,873 CentralNode=1 Selected=0xF39687C3
-    DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0D3852B7
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x2300F6EF
-  DockNode      ID=0x00000008 Parent=0x09EF459F SizeRef=386,1355 Split=Y Selected=0xE7629639
-    DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0xE7629639
-    DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=2172,1355 Split=Y
+    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=749,873 Selected=0xF9BEF62A
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1421,873 Split=X Selected=0xF39687C3
+        DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=479,1007 Selected=0x49A48618
+        DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=1691,1007 CentralNode=1 Selected=0xF39687C3
+    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0D3852B7
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x2300F6EF
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=386,1355 Split=Y Selected=0xE7629639
+    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0xE7629639
+    DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
 
