changed the assertion macros from __builtin_trap to raise(SIGTRAP)

--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -31,7 +31,7 @@ Size=483,346
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][ Heirachy]
+[Window][ Heirarchy]
 Pos=2174,582
 Size=386,795
 Collapsed=0
