--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -31,17 +31,11 @@ Size=483,346
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][ Heirarchy]
-Pos=2174,582
-Size=386,795
-Collapsed=0
-DockId=0x0000000A,0
-
 [Window][ Properties]
 Pos=2174,22
-Size=386,558
+Size=386,753
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000D,0
 
 [Window][##StartScreen]
 Pos=980,388
@@ -64,6 +58,12 @@ Pos=60,60
 Size=640,480
 Collapsed=0
 
+[Window][ Hierarchy]
+Pos=2174,777
+Size=386,600
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
   DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=2172,1355 Split=Y
@@ -76,6 +76,8 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0D3852B7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x2300F6EF
   DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=386,1355 Split=Y Selected=0xE7629639
-    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0xE7629639
+    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Split=Y Selected=0xE7629639
+      DockNode    ID=0x0000000D Parent=0x00000009 SizeRef=386,753 Selected=0xE7629639
+      DockNode    ID=0x0000000E Parent=0x00000009 SizeRef=386,600 Selected=0x0BA53790
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
 
