--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Engine/vendor/math"]
 	path = Engine/vendor/math
 	url = https://github.com/ThomasJowett/3D-Maths-libraries
+[submodule "Engine/vendor/spdlog"]
+	path = Engine/vendor/spdlog
+	url = https://github.com/gabime/spdlog
