--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,6 @@
 	path = Engine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
 	branch = v1.x
+[submodule "Engine/vendor/LiquidFun"]
+	path = Engine/vendor/LiquidFun
+	url = https://github.com/google/liquidfun
