--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 [submodule "Engine/vendor/LiquidFun"]
 	path = Engine/vendor/LiquidFun
 	url = https://github.com/google/liquidfun
+[submodule "Engine/vendor/SPIRV-Cross"]
+	path = Engine/vendor/SPIRV-Cross
+	url = https://github.com/KhronosGroup/SPIRV-Cross
