--- a/.gitmodules
+++ b/.gitmodules
@@ -33,6 +33,12 @@
 [submodule "Engine/vendor/LiquidFun"]
 	path = Engine/vendor/LiquidFun
 	url = https://github.com/google/liquidfun
+	branch = master
 [submodule "Engine/vendor/SPIRV-Cross"]
 	path = Engine/vendor/SPIRV-Cross
 	url = https://github.com/KhronosGroup/SPIRV-Cross
+	branch = master
+[submodule "Engine/vendor/lua"]
+	path = Engine/vendor/lua
+	url = https://github.com/lua/lua
+	branch = master
