--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -14,8 +14,8 @@ Size=550,680
 Collapsed=1
 
 [Window][ Viewport]
-Pos=481,22
-Size=1691,1007
+Pos=387,22
+Size=1785,1007
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -23,7 +23,7 @@ DockId=0x0000000C,0
 Pos=0,1031
 Size=1687,346
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000003,2
 
 [Window][ Joystick Info]
 Pos=1689,1031
@@ -33,9 +33,9 @@ DockId=0x00000004,0
 
 [Window][ Properties]
 Pos=2174,22
-Size=386,753
+Size=386,1355
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000009,0
 
 [Window][##StartScreen]
 Pos=980,388
@@ -48,10 +48,10 @@ Size=640,480
 Collapsed=0
 
 [Window][ Console]
-Pos=0,22
-Size=479,1007
+Pos=0,1031
+Size=1687,346
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000003,1
 
 [Window][ Project Settings]
 Pos=60,60
@@ -59,25 +59,34 @@ Size=640,480
 Collapsed=0
 
 [Window][ Hierarchy]
-Pos=2174,777
-Size=386,600
+Pos=0,22
+Size=385,1007
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000B,0
+
+[Window][ Error List]
+Pos=0,1031
+Size=1687,346
+Collapsed=0
+DockId=0x00000003,0
+
+[Table][0x62865E69,3]
+Column 0  Weight=1.0000 Sort=0v
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=X
   DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=2172,1355 Split=Y
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=2560,1007 Split=X Selected=0xF39687C3
       DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=749,873 Selected=0xF9BEF62A
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1421,873 Split=X Selected=0xF39687C3
-        DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=479,1007 Selected=0x49A48618
-        DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=1691,1007 CentralNode=1 Selected=0xF39687C3
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1421,873 Split=X Selected=0x0AEBC58F
+        DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=385,1007 Selected=0x510084CD
+        DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=1785,1007 CentralNode=1 Selected=0x0AEBC58F
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0D3852B7
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x2300F6EF
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0F754BE3
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x14F42826
   DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=386,1355 Split=Y Selected=0xE7629639
-    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Split=Y Selected=0xE7629639
-      DockNode    ID=0x0000000D Parent=0x00000009 SizeRef=386,753 Selected=0xE7629639
-      DockNode    ID=0x0000000E Parent=0x00000009 SizeRef=386,600 Selected=0x0BA53790
+    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0x94DE0ACF
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
 
