Added MSDF atlas gen
Added a default font
Moved some of the selection code into tileset view
Clean up assets on scene change

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "Engine/vendor/box2d"]
 	path = Engine/vendor/box2d
 	url = https://github.com/ThomasJowett/box2d-particles
+[submodule "Engine/vendor/msdf-atlas-gen"]
+	path = Engine/vendor/msdf-atlas-gen
+	url = https://github.com/TheCherno/msdf-atlas-gen
