Added ability to generate xcode project files and arm premake

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,13 @@ Makefile
 /Editor/Log.txt
 /Editor/styles/Editor.style
 Editor/Editor.args.json
+
+# xcode
+.DS_Store
+.Trashes
+*.swp
+*.plist
+*.pbxproj
+*.xcuserstate
+*.xcworkspacedata
+
