--- a/Editor/imgui.ini
+++ b/Editor/imgui.ini
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=29,970
+Pos=34,930
 Size=550,680
 Collapsed=1
 
@@ -20,16 +20,16 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][ Content Explorer]
-Pos=0,1031
-Size=1687,346
+Pos=1089,1031
+Size=1083,346
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x0000000E,0
 
 [Window][ Joystick Info]
-Pos=1689,1031
-Size=483,346
+Pos=0,1031
+Size=1087,346
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000D,2
 
 [Window][ Properties]
 Pos=2174,22
@@ -49,9 +49,9 @@ Collapsed=0
 
 [Window][ Console]
 Pos=0,1031
-Size=1687,346
+Size=1087,346
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x0000000D,0
 
 [Window][ Project Settings]
 Pos=60,60
@@ -66,9 +66,9 @@ DockId=0x0000000B,0
 
 [Window][ Error List]
 Pos=0,1031
-Size=1687,346
+Size=1087,346
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000D,1
 
 [Table][0x62865E69,3]
 Column 0  Weight=1.0000 Sort=0v
@@ -84,8 +84,8 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1355 Split=
         DockNode  ID=0x0000000B Parent=0x00000006 SizeRef=385,1007 Selected=0x510084CD
         DockNode  ID=0x0000000C Parent=0x00000006 SizeRef=1785,1007 CentralNode=1 Selected=0x0AEBC58F
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=2560,346 Split=X Selected=0x2300F6EF
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=1687,480 Selected=0x0F754BE3
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=483,480 Selected=0x14F42826
+      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=844,346 Selected=0x3CB89FC3
+      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=841,346 Selected=0x0F754BE3
   DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=386,1355 Split=Y Selected=0xE7629639
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=400,558 Selected=0x94DE0ACF
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=400,795 Selected=0x55405BE1
