--- a/Runtime/CMakeLists.txt
+++ b/Runtime/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_executable(Runtime src/main.cpp)
+add_executable(Runtime src/main.cpp
+                src/RuntimeLayer.cpp
+                src/RuntimeLayer.h)
 
 target_link_libraries(Runtime PRIVATE Engine)
