Added copying the data to the output directory

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fonts/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/History/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/*.cpp
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/Node Editor/*.cpp"
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Importers/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Interfaces/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Panels/*.cpp
@@ -19,6 +20,7 @@ file(GLOB HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Fonts/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/History/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/*.h
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/Node Editor/*.h"
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Importers/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Interfaces/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Panels/*.h
@@ -26,6 +28,8 @@ file(GLOB HEADERS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Toolbars/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Viewers/*.h
 )
+
+add_compile_options("$<$<CONFIG:DEBUG>:-DDEBUG>" "$<$<CONFIG:DEBUG>:-DENABLE_ASSERTS>")
 
 add_executable(Editor ${SOURCES} ${HEADERS})
 
@@ -43,11 +47,39 @@ foreach(source IN LISTS SOURCES)
     source_group("Source Files${group_name}" FILES "${source}")
 endforeach()
 
-target_link_libraries(Editor PRIVATE Engine)
+target_link_libraries(Editor PRIVATE Engine OpenFBX)
 
 target_include_directories(Editor PUBLIC
                             ${CMAKE_CURRENT_SOURCE_DIR}/src
                             ${CMAKE_CURRENT_SOURCE_DIR}/vendor
+                            ${CMAKE_CURRENT_SOURCE_DIR}/vendor/IconFont
+                            ${CMAKE_CURRENT_SOURCE_DIR}/vendor/OpenFBX/src
+                            ${CMAKE_CURRENT_SOURCE_DIR}/vendor/json
+                            ${CMAKE_CURRENT_SOURCE_DIR}/vendor/tinygltf
                             Engine/src
                             Engine/vendor
+                            Engine/vendor/spdlog/include
+                            Engine/vendor/cereal/include
+                            Engine/vendor/box2d/include
+                            Engine/vendor/lua
+                            Engine/vendor/stb
         )
+
+add_definitions(
+    -D_CRT_SECURE_NO_WARNINGS
+    -DUNICODE
+)
+
+add_custom_command(
+    TARGET Editor POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    "${CMAKE_CURRENT_SOURCE_DIR}/data"
+    "$<TARGET_FILE_DIR:Editor>/data"
+)
+
+add_custom_command(
+    TARGET Editor POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_CURRENT_SOURCE_DIR}/imgui.ini
+    "$<TARGET_FILE_DIR:Editor>"
+)
