--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -257,8 +257,11 @@ add_definitions(
     -DUNICODE
 )
 
-
-target_compile_options(Engine PRIVATE "/bigobj")
+if (MSVC)
+    target_compile_options(Engine PRIVATE "/bigobj")
+else ()
+  target_compile_options(Engine PRIVATE -Wa,-mbig-obj)
+endif ()
 
 target_include_directories(Engine PUBLIC
                             src
