Added editor icon to the binary

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -1,51 +1,47 @@
 file(GLOB SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/FileSystem/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fonts/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/History/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/*.cpp
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/Node Editor/*.cpp"
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Importers/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Interfaces/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Panels/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Styles/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Toolbars/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Viewers/*.cpp
+    src/*.cpp
+    src/FileSystem/*.cpp
+    src/Fonts/*.cpp
+    src/History/*.cpp
+    src/ImGui/*.cpp
+    "src/ImGui/Node Editor/*.cpp"
+    src/Importers/*.cpp
+    src/Interfaces/*.cpp
+    src/Panels/*.cpp
+    src/Styles/*.cpp
+    src/Toolbars/*.cpp
+    src/Viewers/*.cpp
 )
 
 file(GLOB HEADERS
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/FileSystem/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Fonts/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/History/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/*.h
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/ImGui/Node Editor/*.h"
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Importers/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Interfaces/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Panels/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Styles/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Toolbars/*.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Viewers/*.h
+    src/*.h
+    src/*.h
+    src/FileSystem/*.h
+    src/Fonts/*.h
+    src/History/*.h
+    src/ImGui/*.h
+    "src/ImGui/Node Editor/*.h"
+    src/Importers/*.h
+    src/Interfaces/*.h
+    src/Panels/*.h
+    src/Styles/*.h
+    src/Toolbars/*.h
+    src/Viewers/*.h
 )
+
+if(MSVC)
+    file(GLOB RESOURCE_FILES
+        resource.h
+        Editor.rc
+    )
+endif()
 
 add_compile_options("$<$<CONFIG:DEBUG>:-DDEBUG>" "$<$<CONFIG:DEBUG>:-DENABLE_ASSERTS>")
 
-add_executable(Editor ${SOURCES} ${HEADERS})
+add_executable(Editor ${SOURCES} ${HEADERS} Icon.ico ${RESOURCE_FILES})
 
-foreach(header IN LISTS HEADERS)
-    get_filename_component(header_path "${header}" DIRECTORY)
-    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/src" "" group_path "${header_path}")
-    string(REPLACE "/" "\\" group_name "${group_path}")
-    source_group("Header Files${group_name}" FILES "${header}")
-endforeach()
-
-foreach(source IN LISTS SOURCES)
-    get_filename_component(source_path "${source}" DIRECTORY)
-    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/src" "" group_path "${source_path}")
-    string(REPLACE "/" "\\" group_name "${group_path}")
-    source_group("Source Files${group_name}" FILES "${source}")
-endforeach()
+group_files_by_directory("SOURCES")
+group_files_by_directory("HEADERS")
 
 target_link_libraries(Editor PRIVATE Engine OpenFBX)
 
