Group the third party libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,3 +83,18 @@ add_subdirectory(Editor/vendor)
 add_subdirectory(Engine/vendor/GLFW)
 add_subdirectory(Engine/vendor/TinyXml2)
 add_subdirectory(Engine/vendor/box2d)
+
+set(THIRD_PARTY_FOLDER "ThirdParty")
+
+set_target_properties(glfw PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/GLFW)
+set_target_properties(update_mappings PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/GLFW)
+set_target_properties(tinyxml2 PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(box2d PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(freetype PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(glad PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(imgui PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(lua PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(miniz PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
+set_target_properties(msdf-atlas-gen PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/msdfgen)
+set_target_properties(msdfgen PROPERTIES FOLDER ${THIRD_PARTY_FOLDER}/msdfgen)
+set_target_properties(OpenFBX PROPERTIES FOLDER ${THIRD_PARTY_FOLDER})
