--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -249,6 +249,7 @@ target_link_libraries(Engine PRIVATE
                       lua
                       box2d
                       msdf-atlas-gen
+                      volk
                       )
 
 add_definitions(
