--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -47,7 +47,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    name: Install Vulkan SDK
+    - name: Install Vulkan SDK
       run: |
         sudo apt-get update
         sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
@@ -55,7 +55,6 @@ jobs:
         sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.2.182-focal.list https://packages.lunarg.com/vulkan/1.2.182/lunarg-vulkan-1.2.182-focal.list
         sudo apt-get update
         sudo apt-get install -y vulkan-sdk
-
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
