--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -48,13 +48,20 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Vulkan SDK
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
-        sudo apt-get update
-        sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
-        wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
-        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.2.182-focal.list https://packages.lunarg.com/vulkan/1.2.182/lunarg-vulkan-1.2.182-focal.list
-        sudo apt-get update
-        sudo apt-get install -y vulkan-sdk
+        if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
+          sudo apt-get update
+          sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
+          wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
+          sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.3.261-focal.list https://packages.lunarg.com/vulkan/1.3.261/lunarg-vulkan-1.3.261-focal.list
+          sudo apt-get update
+          sudo apt-get install -y vulkan-sdk
+        elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+          curl -o vulkan-sdk.exe https://vulkan.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe
+          Start-Process -Wait -FilePath .\vulkan-sdk.exe -ArgumentList '/S' -NoNewWindow
+          Remove-Item vulkan-sdk.exe
+        fi
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
