--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -49,19 +49,19 @@ jobs:
 
     - name: Install Vulkan SDK
       run: |
-        if [ "$RUNNER_OS" == "Linux" ]; then
+        if ($env:RUNNER_OS -eq "Linux") {
           sudo apt-get update
           sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
           wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
           sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.3.261-focal.list https://packages.lunarg.com/vulkan/1.3.261/lunarg-vulkan-1.3.261-focal.list
           sudo apt-get update
           sudo apt-get install -y vulkan-sdk
-        fi
-        if [ "$RUNNER_OS" == "Windows" ]; then
+        }
+        if ($env:RUNNER_OS -eq "Windows") {
           curl -o vulkan-sdk.exe https://vulkan.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe
           Start-Process -Wait -FilePath .\vulkan-sdk.exe -ArgumentList '/S' -NoNewWindow
           Remove-Item vulkan-sdk.exe
-        fi
+        }
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
