--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -47,21 +47,21 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Vulkan SDK
+    - name: Install Vulkan SDK Linux
+      if: startsWith(matrix.os, 'ubuntu')
       run: |
-        if ($env:RUNNER_OS -eq "Linux") {
           sudo apt-get update
           sudo apt-get install -y libx11-dev libxrandr-dev libxi-dev libxinerama-dev libgl1-mesa-dev libxcursor-dev mesa-common-dev g++ make
           wget -qO - https://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
           sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.3.261-focal.list https://packages.lunarg.com/vulkan/1.3.261/lunarg-vulkan-1.3.261-focal.list
           sudo apt-get update
           sudo apt-get install -y vulkan-sdk
-        }
-        if ($env:RUNNER_OS -eq "Windows") {
+          
+    - name: Install Vulkan SDK Windows
+      if: startsWith(matrix.os, 'windows')
           Invoke-WebRequest -Uri 'https://vulkan.lunarg.com/sdk/download/1.3.261.1/windows/VulkanSDK-1.3.261.1-Installer.exe' -OutFile 'vulkan-sdk.exe'
           Start-Process -Wait -FilePath .\vulkan-sdk.exe -ArgumentList '/S' -NoNewWindow
           Remove-Item vulkan-sdk.exe
-        }
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
